page/static/page/style.css
html {
}


body {
    background-color: #000000 !important;
    margin: 0px;
}


#top {
    height: 50%;
    width: 100%;
    display: flex;
}


#middle {
    height: 30%;
    width: 100%:
}

#bottom {
    height: 20%;
    width: 100%;
    display: flex;
    /*-webkit-column-count: 5;*/
}


#clock {
    font-size: 80px;
    text-align: center;
    flex: 3;
}


#weather-quote {
    flex: 3;
}


#right-side {
    flex: 4;
}

/* --- Calendar --- */
#calendar {
    height: 35%;
}


#month {
    text-align: center;
    font-size: 20pt;
}


#week-days {
    display: flex;
}


.week-day{
    flex: 1;
    font-size: 14pt;
    text-align: center;
}


#weeks {
    height: 90%;
    width: 100%;
    display: flex;
    flex-direction: row;
}

.week-col {
    flex: 1;
    display: flex;
    flex-direction: column;
    text-align: center;
}


.week-row {
    flex: 1;
    padding-top: 30%;
}


/* --- Specific Event --- */
#upcoming-events {
    height: 30%;
    margin-top: 10%;
    margin-left: 10%;
    display: flex;
    flex-direction: column;
}

.event {
    flex: 1;
    margin-right: 5%;
    font-size: 14pt;
    text-align: right;
}


/* --- Current weather --- */
#current-day {
    background-color: #FFFFFF;
    color: #000000;
    border-radius: 90%;
}

#current_temp {
    text-align:center;
    height: 10%;
    font-size: 40pt;
    margin-top: -15%;
}


/* --- Quote ---*/
#quote-box {
    margin: 5%;
}

#quote {
    font-size: 20pt;
    font-style: italic;
    text-align: center;
}


#author {
    font-size: 15pt;
    text-align: right;
    padding-top: 4%;
}


/* --- Weather Forecast --- */
#icon {
    margin-top: -5%;
}


.weather-images{
    width:100%;
    height:50%;
}


.weather-box {
    height:100%;
    flex-grow: 1;
}


.invert {
    -webkit-filter: invert(1);
}


.day {
    text-align: center;
    font-size: 20pt;
}


.temp {
    height: 20%;
    font-size: 20pt;
    text-align: center;
    padding-top: 5%;
}


.precip-wind {
    height: 20%;
    font-size: 15pt;
    text-align: center;
    vertical-align: middle;
}

